# Tube

./: .env  package-lock.json  package.json  server.js
backend/: README.md  issues  pyproject.toml  requirements.txt
backend/instance/: users.db
backend/src/: main.py  models.py  routes.py  schemas.py  utils.py
backend/tests/: test_main.py
config/: swagger.js
controllers/: accountController.js  exampleController.js  youtubeController.js
models/: accountModel.js  exampleModel.js  youtubeModel.js
routes/: index.js
services/: youtubeInteractionService.js
